update/Examen Primer Bimestre

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
+            android:parentActivityName=".LoginActivity"
             android:exported="false">
 
         </activity>
